fixed another weird scrollbar issue with duplicates

--- a/src/app/styles/ArticleGrid.css
+++ b/src/app/styles/ArticleGrid.css
@@ -7,8 +7,9 @@
     align-self: center;
     column-gap: 2vw;
     row-gap: 3vw;
-    margin-bottom: 10vh;
+    margin-bottom: 3vh;
     max-width: 100vw;
+    height: 100%;
 }
 
 @media (max-width: 700px) {
@@ -20,6 +21,7 @@
         row-gap: 3vw;
         margin: 0px;
         max-width: 100%;
+        max-height: 100%;
     }
 }
 
@@ -32,5 +34,6 @@
         row-gap: 3vw;
         margin: 0px;
         max-width: 100%;
+        max-height: 100%;
     }
 }
