--- a/src/app/styles/Body.css
+++ b/src/app/styles/Body.css
@@ -1,6 +1,6 @@
 .body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: grid;
     justify-items: center;
     align-items: center;
