--- a/src/app/styles/Header.css
+++ b/src/app/styles/Header.css
@@ -8,7 +8,7 @@
     align-items: center;
     justify-items: center;
     padding: 2vh 0vh;
-    margin-bottom: 2vh;
+    margin-bottom: 3vh;
 }
 
 #grand {
