--- a/src/app/styles/Wrapper.css
+++ b/src/app/styles/Wrapper.css
@@ -2,4 +2,5 @@
     overflow: auto;
     width: 100%;
     max-width: 100%;
+    max-height: 100%;
 }
